--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 <script>
     const Webamp = window.Webamp, webamp = new Webamp({
 		initialTracks: [
-            { url: "https://dev.shinmai.wtf/webamp/track1.mp3", },
-            { url: "https://dev.shinmai.wtf/webamp/track2.mp3" },
+            { url: "https://shinmai.github.io/webamptest/track01.mp3" },
+            { url: "https://shinmai.github.io/webamptest/track02.mp3" },
+            { url: "https://shinmai.github.io/webamptest/track03.mp3" },
         ],
 		initialSkin: { url: './skin.wsz' },
     });
