--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
 </head>
 <body>
 <script src="https://unpkg.com/webamp@1.4.2/built/webamp.bundle.min.js"></script>
+<script src="https://unpkg.com/butterchurn@2.6.7/lib/butterchurn.min.js"></script>
+<script src="https://unpkg.com/butterchurn-presets@2.4.7/lib/butterchurnPresets.min.js"></script>
 <script>
     const Webamp = window.Webamp, webamp = new Webamp({
-		initialTracks: [
+	initialTracks: [
             { url: "https://shinmai.github.io/webamptest/track1.mp3" },
             { url: "https://shinmai.github.io/webamptest/track2.mp3" },
         ],
-		initialSkin: { url: './skin.wsz' },
+	__butterchurnOptions: {
+	importButterchurn: () => Promise.resolve(window.butterchurn),
+	getPresets: () => {
+	    const presets = window.butterchurnPresets.getPresets();
+	    return Object.keys(presets).map((name) => {
+		return {
+		    name,
+		    butterchurnPresetObject: presets[name]
+		};
+	    });
+	},
+	butterchurnOpen: true
+	},	    
+	initialSkin: { url: './skin.wsz' },
     });
     webamp.renderWhenReady(document.body);
 </script>
