--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             { url: "https://github.com/onthinice/winamp/" },
 	    { url: "https://github.com/onthinice/winamp/" },
         ],
-		initialSkin: { url: './Mac_OS_X_-_Aqua.wsz' },
+		initialSkin: { url: 'https://github.com/onthinice/winamp/Mac_OS_X_-_Aqua.wsz' },
     });
     webamp.renderWhenReady(document.getElementById('main'));
 </script>
